[package]
name = "ps-str"
version = "0.1.0-5"
edition = "2021"
rust-version = "1.74"
description = "String transcoding library"
license = "GPL-3.0-or-later"

[dependencies]
arcstr = { version = "1.2", default-features = false, optional = true }

[dev-dependencies]
encoding = "0.2.33"

[features]
arcstr = ["dep:arcstr"]

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
